# lib_registry

./: .env.example  .gitignore  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  README.md  README.rst  codecov.yml  lib_registry.ipynb  pyproject.toml  requirements.txt  reset_git_history.sh
.3rd_party_stubs/: winreg.pyi
.docs/: README_template.rst  badges.rst  commandline_help.rst  installation.rst  installation_via_pypi.rst  tested_under.rst
.github/workflows/: python-package.yml
docs/systemdesign/: module_reference.md
lib_registry/: __init__conf__.py  lib_registry.py  lib_registry_cli.py
notebooks/: Quickstart.ipynb
src/lib_registry/: __init__.py  __init__conf__.py  __main__.py  _cli_helpers.py  _helpers.py  _winreg_setup.py  cli.py  exceptions.py  registry.py  typed_click.py
tests/: conftest.py  test_cli.py  test_metadata.py  test_module_entry.py
tests/local_testscripts/: lib_bash_functions.sh
