[project]
name = "lib_registry"
version = "3.1.4"
description = "a more pythonic way to access the windows registry as winreg"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.8",
    "rtoml>=0.13.0",
    "fake_winreg>=1.9.2; sys_platform!='win32'",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["registry", "winreg", "windows", "fake_winreg", "regedit", "hive", "cross-platform"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/lib_registry"
Repository = "https://github.com/bitranox/lib_registry.git"
Issues = "https://github.com/bitranox/lib_registry/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.16.0",
  "pyright[nodejs]>=1.1.411",
  "bandit>=1.9.4",
  # 1.5.1 was yanked upstream (unintended breaking changes), so 1.5.0 is the newest usable
  # release; a >=1.5.1 floor has ZERO candidates and makes this extra unresolvable.
  "build>=1.5.0",
  "twine>=6.2.0",
  # codecov-cli is disabled, not dropped: it requires click<8.3.0, which drags click back to
  # 8.2.1 - the version with CVE-2026-7246 (command injection in click.edit(), fixed in 8.3.3).
  # Nothing else here caps click, so with this line active the audit gate goes red on every
  # clean install. Leaving it off costs nothing: CI uploads coverage via codecov/codecov-action,
  # not this CLI, and "bmk codecov" resolves codecovcli from PATH and only warns when absent.
  # Re-enable once codecov-cli relaxes its click<8.3.0 pin.
  # "codecov-cli>=11.2.8",
  # Transitive CVE pins
  "click>=8.4.2",                # CVE-2026-7246
  "pip-audit>=2.10.1",
  "textual>=8.2.8",
  "import-linter>=2.13",
  "pydantic>=2.13.4",
  "setuptools>=83.0.0",
  "rtoml>=0.13.0",
]

[project.scripts]
lib_registry = "lib_registry.cli:main"

[build-system]
requires = [
    "hatchling>=1.31.0",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib_registry"]
include = ["src/lib_registry/py.typed"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "N",           # pep8-naming
  "UP",          # pyupgrade
  "B",           # bugbear
  "A",           # builtins shadowing
  "C4",          # comprehension simplification
  "SIM",         # simplification
  "TCH",         # type-checking imports
  "RUF",         # ruff-specific
  "G",           # logging format (catches f-string in logger)
  "T20",         # print statements
  "PTH",         # pathlib preference
  "PLC", "PLE",  # pylint conventions/errors
  "S",           # flake8-bandit security checks
  "PERF",        # performance anti-patterns
  "ERA",         # eradicate dead/commented-out code
  "FBT",         # boolean trap (boolean positional args)
  "PLR",         # pylint refactor
  "PLW",         # pylint warnings
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]
# Tests: assert is standard, test fixtures have passwords, magic values are clearer inline, temp paths are fine.
# PLC0415: local/deferred imports are a deliberate test idiom - several tests import inside the test
# body to exercise import-time and cache behaviour, so moving them to module top would defeat intent.
"tests/*.py" = ["T20", "S101", "S105", "S106", "S108", "FBT001", "FBT003", "PLR0913", "PLR2004", "PLC0415"]
# CLI: Click commands genuinely need several options; cli_set (key/value_name/data/value_type/use_default) exceeds 5.
"src/lib_registry/cli.py" = ["PLR0913"]
# CLI helpers: list_human mirrors the CLI's own show_keys/show_values/recursive/indent flag surface.
"src/lib_registry/_cli_helpers.py" = ["PLR0913"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  "src/lib_registry/_winreg_setup.py",
  "src/lib_registry/_helpers.py",
  "src/lib_registry/_cli_helpers.py",
  "src/lib_registry/registry.py",
  "src/lib_registry/cli.py",
  "tests/test_cli.py",
  ".venv*",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "local_only: test only runs in local development environments (skipped in CI)",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_registry"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 70
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"

[tool.scripts.test]
# Configuration for CICD test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"

[tool.importlinter]
root_package = "lib_registry"

[[tool.importlinter.contracts]]
name = "CLI adapter depends on domain layer"
type = "layers"
layers = [
  "lib_registry.cli",
  "lib_registry._cli_helpers",
  "lib_registry.registry",
  "lib_registry._helpers",
  "lib_registry.exceptions | lib_registry._winreg_setup",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph / PYSEC-2022-42969: py library ReDoS (no fix available, low risk)
# GHSA-w853-jp5j-5j7f / GHSA-qmgc-5h2g-mvrw: filelock transitive dep vulnerabilities
# CVE-2026-1703 / CVE-2026-25990 / CVE-2026-26007 / CVE-2026-4539 / CVE-2026-25645: transitive dep CVEs (no direct fix)
# CVE-2026-34513..34520 / CVE-2026-34525 / CVE-2026-22815 / CVE-2026-34514: aiohttp transitive dep (not used directly)
ignore-vulns = ["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969", "CVE-2026-1703", "CVE-2026-25990", "CVE-2026-26007", "GHSA-w853-jp5j-5j7f", "GHSA-qmgc-5h2g-mvrw", "CVE-2026-4539", "CVE-2026-25645", "CVE-2026-34515", "CVE-2026-34513", "CVE-2026-34516", "CVE-2026-34517", "CVE-2026-34519", "CVE-2026-34518", "CVE-2026-34520", "CVE-2026-34525", "CVE-2026-22815", "CVE-2026-34514"]

[tool.bashate]
# bashate style settings for .sh files (E003 excluded: indent handled by shfmt)
max-line-length = 120
ignores = ["E003"]
